package com.valentyn;

public interface ItemElement {
    int accept(Visitor visitor);
}
